quase depois de juntar RF

--- a/apendice2.tex
+++ b/apendice2.tex
@@ -82,7 +82,7 @@ exposta na Seção \ref{algs} são apresentados nas tabelas \ref{tab:balaccClassif0
 %
 \subsection{RF}
 \afterpage{\clearpage\begin{landscape}
-\input stratsALCKappaRF
+\input stratsALCKappaRFRedux
 \end{landscape}\clearpage}
 
 % \afterpage{\clearpage\begin{landscape}
