--- a/apendice2.tex
+++ b/apendice2.tex
@@ -17,19 +17,19 @@ exposta na Seção \ref{algs} são apresentados nas tabelas \ref{tab:balaccClassif0
 % \esb{Rnd não vence isoladamente em nenhuma das bases com os classificadores selecionados.}
 % % só pra base 45 com ielm
 % 
-% \subsection{5NN}
-% \afterpage{\clearpage\begin{landscape}
-% \input stratsALCKappa5NN
-% \end{landscape}\clearpage}
+\subsection{5NN}
+\afterpage{\clearpage\begin{landscape}
+\input stratsALCKappa5NN
+\end{landscape}\clearpage}
 % 
 % \afterpage{\clearpage\begin{landscape}
 % \input stratsBalAcc5NN
 % \end{landscape}\clearpage}
 % 
-% \subsection{C4.5}
-% \afterpage{\clearpage\begin{landscape}
-% \input stratsALCKappaC4.5
-% \end{landscape}\clearpage}
+\subsection{C4.5}
+\afterpage{\clearpage\begin{landscape}
+\input stratsALCKappaC4.5
+\end{landscape}\clearpage}
 % 
 % \afterpage{\clearpage\begin{landscape}
 % \input stratsBalAccC4.5
@@ -53,28 +53,28 @@ exposta na Seção \ref{algs} são apresentados nas tabelas \ref{tab:balaccClassif0
 % \input stratsBalAccIELM
 % \end{landscape}\clearpage}
 % 
-% \subsection{NB}
-% \afterpage{\clearpage\begin{landscape}
-% \input stratsALCKappaNB
-% \end{landscape}\clearpage}
+\subsection{NB}
+\afterpage{\clearpage\begin{landscape}
+\input stratsALCKappaNB
+\end{landscape}\clearpage}
 % 
 % \afterpage{\clearpage\begin{landscape}
 % \input stratsBalAccNB
 % \end{landscape}\clearpage}
 % 
-% \subsection{SVM}
-% \afterpage{\clearpage\begin{landscape}
-% \input stratsALCKappaSVM
-% \end{landscape}\clearpage}
+\subsection{SVM}
+\afterpage{\clearpage\begin{landscape}
+\input stratsALCKappaSVM
+\end{landscape}\clearpage}
 % 
 % \afterpage{\clearpage\begin{landscape}
 % \input stratsBalAccSVM
 % \end{landscape}\clearpage}
 % 
-% \subsection{VFDT}
-% \afterpage{\clearpage\begin{landscape}
-% \input stratsALCKappaVFDT
-% \end{landscape}\clearpage}
+\subsection{VFDT}
+\afterpage{\clearpage\begin{landscape}
+\input stratsALCKappaVFDT
+\end{landscape}\clearpage}
 % 
 % \afterpage{\clearpage\begin{landscape}
 % \input stratsBalAccVFDT
@@ -82,7 +82,7 @@ exposta na Seção \ref{algs} são apresentados nas tabelas \ref{tab:balaccClassif0
 %
 \subsection{RF}
 \afterpage{\clearpage\begin{landscape}
-\input stratsALCKappaRFRedux
+\input stratsALCKappaRF %Redux
 \end{landscape}\clearpage}
 
 % \afterpage{\clearpage\begin{landscape}
