--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1387,3 +1387,17 @@ year = {2006}
   pages =       "593--608",
   URL =         "http://dx.doi.org/10.1109/JPROC.2012.2231951",
 }
+
+@Article{journals/ml/Breiman01,
+  title =       "Random Forests",
+  author =      "Leo Breiman",
+  journal =     "Machine Learning",
+  year =        "2001",
+  number =      "1",
+  volume =      "45",
+  bibdate =     "2011-05-26",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/journals/ml/ml45.html#Breiman01",
+  pages =       "5--32",
+  URL =         "http://dx.doi.org/10.1023/A:1010933404324",
+}
