--- a/metodologia.tex
+++ b/metodologia.tex
@@ -99,10 +99,11 @@ Cinco algoritmos comumente usados e implementados na biblioteca Weka foram adota
 C4.5\footnote{Implementação baseada no algoritmo de
 árvore de decisão C4.5 denominada J48.}, NB\footnote{\textit{Naive Bayes}},
 VFDT\footnote{\textit{Very Fast Decision Trees}},
-5-NN\footnote{Cinco vizinhos mais próximos}
-e SVM\footnote{\textit{Support Vector Machines \ano{explicar detalhes da implementação svmlib/weka para multiclasse?}}}
+5-NN\footnote{Cinco vizinhos mais próximos},
+SVM\footnote{\textit{Support Vector Machines \ano{explicar detalhes da implementação svmlib/weka para multiclasse?}}}
+e RF\footnote{\textit{Random Forest}}
 \citep{books/mk/Quinlan93,conf/ecml/Lewis98,conf/kdd/DomingosH00,journals/tit/Hart68,
-hearst1998support}.
+hearst1998support,journals/ml/Breiman01}.
 Adicionalmente, por sua ausência na literatura de aprendizado ativo e características
 distintivas com relação aos outros algoritmos,
 três variantes das \elms também foram adotadas - conforme adaptações descritas
