--- a/stratsALCKappaFriedCIELMRedux.tex
+++ b/stratsALCKappaFriedCIELMRedux.tex
@@ -1,18 +1,20 @@
 \begin{table}[h]
 \caption{Um contra um (CIELM). Medida: ALCKappa. \textit{Legenda na Tabela \ref{tab:friedClassif}.}}
-\begin{center}\scalebox{0.9}{\begin{tabular}{lcc|cc|cc|cc|cc|c}
- 			& 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & 11\\
-1 - Rnd  	& - &   &   &   &   &   &   &   &   &   &   \\
-2 - Clu  	&   & - &   &   &   &   &   &   &   &   &   \\ \hline
-3 - Mar  	& * & * & - & * &   & * & * &   &   &   &   \\
-4 - EERent	&   &   &   & - &   &   &   &   &   &   &   \\ \hline
-5 - EERacu	& * & + &   & . & - & * & * &   &   &   &   \\
-6 - \textbf{SGmulti}	&   &   &   &   &   & - &   &   &   &   &   \\ \hline
-7 - DWeuc	&   &   &   &   &   &   & - &   &   &   &   \\
-8 - TUman	& * & * &   & * & * & * & * & - & * &   & * \\ \hline
-9 - \textbf{ATUman}	& * & * &   & * &   & * & * &   & - &   &   \\
-10 - TUmah	& * & * &   & * & * & * & * &   & * & - & * \\ \hline
-11 - \textbf{ATUmah}	& * & * &   & + &   & * & * &   &   &   & - \\\end{tabular}}
+\begin{center}\scalebox{0.9}{\begin{tabular}{lcc|cc|cc|cc|cc|cc|c}
+ 			& 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & 11 & 12 & 13\\
+1 - Rnd  	& - &   &   &   &   &   &   &   &   &   &   & * & * \\
+2 - Clu  	&   & - &   &   &   &   &   &   &   &   &   & * & * \\ \hline
+3 - Mar  	& * & * & - & * &   & * & * &   &   &   &   & * & * \\
+4 - EERent	&   &   &   & - &   &   &   &   &   &   &   & * & * \\ \hline
+5 - EERacu	& + & . &   &   & - & * & + &   &   &   &   & * & * \\
+6 - \textbf{SGmulti}	&   &   &   &   &   & - &   &   &   &   &   & * & * \\ \hline
+7 - DWeuc	&   &   &   &   &   &   & - &   &   &   &   & * & * \\
+8 - TUman	& * & * &   & * & * & * & * & - & . &   & * & * & * \\ \hline
+9 - \textbf{ATUman}	& * & * &   & + &   & * & * &   & - &   &   & * & * \\
+10 - TUmah	& * & * &   & * & * & * & * &   & + & - & * & * & * \\ \hline
+11 - \textbf{ATUmah}	& + & + &   &   &   & * & * &   &   &   & - & * & * \\
+12 - GATUman	&   &   &   &   &   &   &   &   &   &   &   & - &   \\ \hline
+13 - GATUmah	&   &   &   &   &   &   &   &   &   &   &   &   & - \\\end{tabular}}
 \label{stratsALCKappaFriedCIELMRedux}
 \end{center}
 \end{table}
