--- a/exp-analise.tex
+++ b/exp-analise.tex
@@ -77,10 +77,12 @@ SGmulti passa a vencer EERacu com maior significância
 conforme Tabela \ref{stratsALCKappaFriedAllReduxHalf}.
 \input stratsALCKappaFriedAllRedux
 \input stratsALCKappaFriedAllReduxHalf
-% Assim, as estratégias propostas podem ser consideradas competitivas em termos de desempenho preditivo.
+\input stratsALCKappaFriedAllRedux50
+
 Assim, as estratégias propostas podem ser consideradas superiores à não aplicação
-de aprendizado ativo (Rnd) e a algumas estratégias relevantes apesar de ATUman e ATUmah não
-terem superarado suas versões originais.
+de aprendizado ativo (Rnd) e a algumas estratégias relevantes apesar de ATUman e ATUmah
+somente terem superado suas versões originais nos orçamentos abaixo de $50$ exemplos
+- conforme Tabela \ref{stratsALCKappaFriedAllRedux50}.
 Em aplicações reais, entretanto, a estabilidade do algoritmo pode ser mais importante
 do que o desempenho preditivo médio, pois uma grande variabilidade pode colocar o
 orçamento sob o risco de ser gasto sem atingir um desempenho adequado e pode levar a custos
