--- a/exp-meta.tex
+++ b/exp-meta.tex
@@ -107,6 +107,8 @@ Multiarmed bandit problem
 http://www.ualberta.ca/~szepesva/Thesis/varun08.thesis.pdf
 
 \section{Recomendação de estratégias}
+\esb{devido à escassez de metaexemplos, LOO foi adotado em conjunto com treinamento
+em grupos de exemplos}
 
 \ano{recomendação de estratégia para base,
 budget e aprendiz dados [e qtd inicial de rótulos?]}
